Fixed some layout issues with recent changes

--- a/less/default.less
+++ b/less/default.less
@@ -108,7 +108,7 @@
 }
 
 .mainContent {
-    margin: 50px 0;
+    padding: 55px 0 50px;
 }
 
 /* ------ End Testing ------*/
