--- a/less/header.less
+++ b/less/header.less
@@ -6,13 +6,14 @@
     right: 0;
     background-color: rgba(250, 250, 250, 0.96);
     z-index: 1;
+    height: 55px;
 
     .leftNavBtn {
-        padding:10px;
-
+        padding-left: 10px;
         .leftNavBtnImg {
             width:40px;
             height:40px;
+            display: block;
         }
     }
 
