--- a/less/wellnessTracker.less
+++ b/less/wellnessTracker.less
@@ -17,11 +17,7 @@
 
     .descriptionContainer {
         width: 100%;
-        max-height: 150px;
 
-        .descriptionText {
-            max-height: 150px;
-        }
     }
 
 
